# icp-canister.poc

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-set.dhall  vessel.dhall
src/icp/: Ledger.mo  LedgerCandid.mo  XDR.mo  main.mo
src/ledger/: ledger.did  main.rs
